Agrega la redireccion del menu

--- a/src/main/resources/templates/login.hbs
+++ b/src/main/resources/templates/login.hbs
@@ -160,7 +160,7 @@ body{
 			<div>Group<span>19</span></div>
 		</div>
 		<br>
-		<form method="GET" action="index2.html" onsubmit="/index2.html">
+		<form method="POST" action="/menu">
 		<div class="login">
 				<input type="text" placeholder="Usuario" name="user"><br>
 				<input type="password" placeholder="Contraseña" name="password"><br>
