--- a/src/main/resources/templates/notFound.hbs
+++ b/src/main/resources/templates/notFound.hbs
@@ -160,12 +160,11 @@ body{
 			<div>Group<span>19</span></div>
 		</div>
 		<br>
-		<form method="POST" action="/login">
+		<form method="POST" action="/menu">
 		<div class="login">
 				<input type="text" placeholder="Usuario" name="user"><br>
 				<input type="password" placeholder="Contraseña" name="password"><br>
 				<input type="submit" value="Entrar">
-			{{error}}
 		</div>
 		</form>
 		
