--- a/src/main/resources/templates/usuario.hbs
+++ b/src/main/resources/templates/usuario.hbs
@@ -1,174 +1,132 @@
+<!DOCTYPE html>
 <html lang="en" >
 
 <head>
   <meta charset="UTF-8">
-  <title>Login SGE</title>
-  
-     <style>
-	     html {
-    	overflow-y: hidden;
-     overflow-x: hidden;
-	  }
-      /* NOTE: The styles were added inline because Prefixfree needs access to your styles and they must be inlined if they are on local disk! */
-      @import url(https://fonts.googleapis.com/css?family=Exo:100,200,400);
-@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:700,400,300);
-body{
-	margin: 0;
-	padding: 0;
-	background: #fff;
-	color: #fff;
-	font-family: Arial;
-	font-size: 12px;
-}
-.body{
-	position: absolute;
-	top: -20px;
-	left: -20px;
-	right: -40px;
-	bottom: -40px;
-	width: auto;
-	height: auto;
-	background-image: url(https://cdn.tn.com.ar/sites/default/files/styles/487x273/public/2018/10/11/bts.jpg);
-	background-size: cover;
-	-webkit-filter: blur(5px);
-	z-index: 0;
-}
-.grad{
-	position: absolute;
-	top: -20px;
-	left: -20px;
-	right: -40px;
-	bottom: -40px;
-	width: auto;
-	height: auto;
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65))); /* Chrome,Safari4+ */
-	z-index: 1;
-	opacity: 0.7;
-}
-.header{
-	position: absolute;
-	top: calc(50% - 35px);
-	left: calc(50% - 255px);
-	z-index: 2;
-}
-.header div{
-	float: left;
-	color: #fff;
-	font-family: 'Exo', sans-serif;
-	font-size: 35px;
-	font-weight: 200;
-}
-.header div span{
-	color: #5379fa !important;
-}
-.login{
-	position: absolute;
-	top: calc(50% - 75px);
-	left: calc(50% - 50px);
-	height: 150px;
-	width: 350px;
-	padding: 10px;
-	z-index: 2;
-}
-.login input[type=text]{
-	width: 250px;
-	height: 30px;
-	background: transparent;
-	border: 1px solid rgba(255,255,255,0.6);
-	border-radius: 2px;
-	color: #fff;
-	font-family: 'Exo', sans-serif;
-	font-size: 16px;
-	font-weight: 400;
-	padding: 4px;
-}
-.login input[type=password]{
-	width: 250px;
-	height: 30px;
-	background: transparent;
-	border: 1px solid rgba(255,255,255,0.6);
-	border-radius: 2px;
-	color: #fff;
-	font-family: 'Exo', sans-serif;
-	font-size: 16px;
-	font-weight: 400;
-	padding: 4px;
-	margin-top: 10px;
-}
-.login input[type=button]{
-	width: 260px;
-	height: 35px;
-	background: #fff;
-	border: 1px solid #fff;
-	cursor: pointer;
-	border-radius: 2px;
-	color: #a18d6c;
-	font-family: 'Exo', sans-serif;
-	font-size: 16px;
-	font-weight: 400;
-	padding: 6px;
-	margin-top: 10px;
-}
-.login input[type=submit]{
-	width: 260px;
-	height: 35px;
-	background: #fff;
-	border: 1px solid #fff;
-	cursor: pointer;
-	border-radius: 2px;
-	color: #a18d6c;
-	font-family: 'Exo', sans-serif;
-	font-size: 16px;
-	font-weight: 400;
-	padding: 6px;
-	margin-top: 10px;
-}
-.login input[type=button]:hover{
-	opacity: 0.8;
-}
-.login input[type=button]:active{
-	opacity: 0.6;
-}
-.login input[type=text]:focus{
-	outline: none;
-	border: 1px solid rgba(255,255,255,0.9);
-}
-.login input[type=password]:focus{
-	outline: none;
-	border: 1px solid rgba(255,255,255,0.9);
-}
-.login input[type=button]:focus{
-	outline: none;
-}
-::-webkit-input-placeholder{
-   color: rgba(255,255,255,0.6);
-}
-::-moz-input-placeholder{
-   color: rgba(255,255,255,0.6);
-}
-    </style>
+  <title>Home</title>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+
+
+  <link rel="stylesheet" href="css/styleUsuario.css">
+
 
 </head>
 
 <body>
-	
-  <div class="body"></div>
-		<div class="grad"></div>
-		<div class="header">
-			<div>Group<span>19</span></div>
-		</div>
-		<br>
-		<form method="GET" action="index2.html" onsubmit="/index2.html">
-		<div class="login">
-				<input type="text" placeholder="Usuario" name="user"><br>
-				<input type="password" placeholder="Contraseña" name="password"><br>
-				<input type="submit" value="Entrar">
-		</div>
-		</form>
-		
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+<html lang="pl">
+<head>
+  <meta charset="utf-8">
+  <title>Code-mine App1</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/fontawesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="css/styleUsuario.css">
+</head>
+<body>
+<div class="container">
+  <!-- Header -->
+  <div class="header">
+    <div class="header-content">
+      <div class="head-menu">
+        <ul>
+          <li>Inicio</li>
+          <li>Dispositivos</li>
+          <li>Mediciones</li>
+          <li>Contacto</li>
+        </ul>
+      </div>
+      <div class="head-buttons">
+        <div class="head-profile">
+          <img src="https://image.flaticon.com/icons/png/512/17/17797.png" alt="Profile photo">
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- App 1 navigation -->
+  <div class="navigation">
+    <div class="header-content">
+      <div class="nav-top">
+        <div class="nav-top-left">
+          <p>Cliente N°{{ cliente }}</p>
+        </div>
+        <div class="nav-top-right">
+        </div>
+      </div>
+      <div class="nav-bottom">
+      </div>
+    </div>
+  </div>
+  <!-- Integrate analytics row -->
+  <div class="info">
+    <p>Queres obtener tu consumo? <a href="/simplex"> Ejecuta el Simplex</a></p>
+  </div>
+  <!-- Content -->
+  <div class="content row">
+    <div class="averages">
+      <div class="averages-title">
+        <p>Consumo actual</p>
+      </div>
+      <div class="averages-table">
+        <div class="test testers">
+          <p><i class="fa fa-user-circle-o" aria-hidden="true"></i></p>
+          <p>24 Testers</p>
+        </div>
+        <div class="test to-buy">
+          <p>12/12/12</p>
+          <p>Inicio</p>
+        </div>
+        <div class="test desirability">
+          <p>13/13/13</p>
+          <p>Fin</p>
+        </div>
+        <div class="test want-it">
+          <p>9.0</p>
+          <p>Consumo maximo</p>
+        </div>
+        <div class="test score">
+          <p>7.77</p>
+          <p>Consumo total</p>
+        </div>
+      </div>
+    </div>
+    <!-- Completed tests -->
+    <div class="complete-tests">
+      <!-- First table of completed tests section-->
+      <div class="complete-tests-title">
+        <p>Completed tests</p>
+        <p>Today</p>
+      </div>
+      <div class="complete-test-table">
+        <div class="table-name">
+          <p>John Smith</p>
+        </div>
+        <div class="table-content">
+          <p>"I've been looking for something like this for a very long time, let me know if you need any beta testers."</p>
+        </div>
+        <div class="table-score">
+          <p>7.6</p>
+          <p>View more</p>
+        </div>
+      </div>
+      <!-- Second table of completed tests section-->
+      <div class="complete-test-table">
+        <div class="table-name">
+          <p>Marry</p>
+        </div>
+        <div class="table-content">
+          <p>"Don't think it's different enough from other apps that are already out there."</p>
+        </div>
+        <div class="table-score">
+          <p>5.1</p>
+          <p>View more</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</body>
+</html>
+
+
 
 </body>
 
