--- a/src/main/resources/templates/admin.hbs
+++ b/src/main/resources/templates/admin.hbs
@@ -1,56 +1,1 @@
-<!DOCTYPE html>
-<html lang="en" >
-
-<head>
-  <meta charset="UTF-8">
-  <title>SGE</title>
-  
-  
-  <link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
-<link rel='stylesheet' href='https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-blue.min.css'>
-
-      <link rel="stylesheet" href="css/styleLogin.css">
-
-  
-</head>
-
-<body>
-
-  <div class="mdl-layout mdl-js-layout mdl-color--cyan-100">
-  <main class="mdl-layout__content">
-    <div class="mdl-card mdl-shadow--16dp">
-      <div class="mdl-card__title mdl-color--accent mdl-color-text--white">
-        <h2 class="mdl-card__title-text">LOG IN</h2>
-      </div>
-      <div class="mdl-card__supporting-text">
-
-        <form method="POST" action="/login">
-
-          <div class="mdl-textfield mdl-js-textfield">
-            <input class="mdl-textfield__input" type="text" id="user" name="user" />
-            <label class="mdl-textfield__label" for="user">Nombre de usuario</label>
-          </div>
-
-          <div class="mdl-textfield mdl-js-textfield">
-            <input class="mdl-textfield__input" type="password" id="password" name="password" />
-            <label class="mdl-textfield__label" for="password">Contraseña</label>
-          </div>
-
-          <div class="mdl-card__actions mdl-card--border">
-            <button type="submit" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" value="Entrar">Entrar</button>
-          </div>
-          <div style="color:#ff472e;">{{ error }}
-
-          </div>
-        </form>
-
-      </div>
-  </main>
-</div>
-  <script src='https://code.getmdl.io/1.1.3/material.min.js'></script>
-
-
-
-</body>
-
-</html>
+Administrador
