Fix intent templates

--- a/src/main/resources/templates/adminAlta.hbs
+++ b/src/main/resources/templates/adminAlta.hbs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="stylesheet" href="css/styleMap.css">
+    <link rel="stylesheet" href="/css/styleMap.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
     <link rel='stylesheet' href='https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-blue.min.css'>
 
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <title>Code-mine App1</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/fontawesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/styleUsuario.css">
+    <link rel="stylesheet" type="text/css" href="/css/styleUsuario.css">
 </head>
 <body>
 <div class="container">
