--- a/src/main/resources/templates/login.hbs
+++ b/src/main/resources/templates/login.hbs
@@ -9,7 +9,7 @@
   <link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
 <link rel='stylesheet' href='https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-blue.min.css'>
 
-      <link rel="stylesheet" href="css/styleLogin.css">
+      <link rel="stylesheet" href="/css/styleLogin.css">
 
   
 </head>
