--- a/src/main/resources/templates/adminAlta.hbs
+++ b/src/main/resources/templates/adminAlta.hbs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="stylesheet" href="/css/styleMap.css">
+    <link rel="stylesheet" href="css/styleMap.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
     <link rel='stylesheet' href='https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-blue.min.css'>
 
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <title>Code-mine App1</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/fontawesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/styleUsuario.css">
+    <link rel="stylesheet" type="text/css" href="css/styleUsuario.css">
 </head>
 <body>
 <div class="container">
@@ -28,7 +28,7 @@
                 <ul>
                     <div class="link">
                         <li><a href="/admin"> Inicio</a></li>
-                        <li><a href="/adminAlta" style="font-size:15px;"> Alta dispositivo</a></li>
+                        <li><a href="/admin/altaDispositivo" style="font-size:15px;"> Alta dispositivo</a></li>
                         <li><a href="/adminReportes" > Ver Reportes</a></li>
                     </div>
 
@@ -70,15 +70,15 @@
             <p>SELECCION DE DISPOSITIVO:</p>
             <ul>
                 <div class="linkDispositivos">
-                    <li><a href="/usuario"> Inicio</a></li>
-                    <li><a href="/dispositivo"> Alta dispositivo</a></li>
-                    <li><a href="/reportes"> Ver reportes</a></li>
-                    <li><a href="/usuario"> Inicio</a></li>
-                    <li><a href="/dispositivo"> Alta dispositivo</a></li>
-                    <li><a href="/reportes"> Ver reportes</a></li>
-                    <li><a href="/usuario"> Inicio</a></li>
-                    <li><a href="/dispositivo"> Alta dispositivo</a></li>
-                    <li><a href="/reportes"> Ver reportes</a></li>
+                    <li><a href="/usuario"> Aire Acondicionado</a></li>
+                    <li><a href="/dispositivo"> Televisor </a></li>
+                    <li><a href="/reportes"> Heladera</a></li>
+                    <li><a href="/usuario"> Lavarropas</a></li>
+                    <li><a href="/dispositivo"> Ventilador</a></li>
+                    <li><a href="/reportes"> Lampara</a></li>
+                    <li><a href="/usuario"> PC</a></li>
+                    <li><a href="/dispositivo"> Microondas</a></li>
+                    <li><a href="/reportes"> Plancha</a></li>
                 </div>
 
             </ul>
@@ -87,15 +87,9 @@
         <div class="complete-tests-title2" style="display: inline-block">
             <ul>
                 <div class="linkDispositivos">
-                    <li><a href="/usuario"> Inicio</a></li>
-                    <li><a href="/dispositivo"> Alta dispositivo</a></li>
-                    <li><a href="/reportes"> Ver reportes</a></li>
-                    <li><a href="/usuario"> Inicio</a></li>
-                    <li><a href="/dispositivo"> Alta dispositivo</a></li>
-                    <li><a href="/reportes"> Ver reportes</a></li>
-                    <li><a href="/usuario"> Inicio</a></li>
-                    <li><a href="/dispositivo"> Alta dispositivo</a></li>
-                    <li><a href="/reportes"> Ver reportes</a></li>
+                    {{#opciones}}
+                    <li><a href={{link}}> {{opcion}}</a></li>
+                    {{/opciones}}
                 </div>
             </ul>
         </div>
