--- a/src/main/resources/templates/admin.hbs
+++ b/src/main/resources/templates/admin.hbs
@@ -45,12 +45,12 @@
         </div>
     </div>
 
-
+    {{usuarios}}
     <div class="navigation">
         <div class="header-content">
             <div class="nav-top">
                 <div class="nav-top-left">
-                    <p>Administrador {{ nombre }}</p>
+                    <p>Administrador {{ nombreUsuario }}</p>
                 </div>
                 <div class="nav-top-right">
                 </div>
