--- a/src/main/resources/templates/usuarioUltimas.hbs
+++ b/src/main/resources/templates/usuarioUltimas.hbs
@@ -27,10 +27,10 @@
       <div class="head-menu">
         <ul>
           <div class="link">
-          <li><a href="/usuario" > Inicio</a></li>
-          <li><a href="/usuario/id/dispositivos">Dispositivos</a></li>
-          <li><a href="/usuario/id/mediciones" style="font-size:15px;">Mediciones</a></li>
-          <li><a href="/usuario/id/simplex">Simplex</a></li>
+          <li><a href="/usuario/{{ cliente.numeroDeUsuario }}" > Inicio</a></li>
+          <li><a href="/usuarioEstados">Dispositivos</a></li>
+          <li><a href="/usuarioUltimas" style="font-size:15px;">Mediciones</a></li>
+          <li><a href="/usuarioSimplex">Simplex</a></li>
           </div>
 
         </ul>
@@ -51,13 +51,13 @@
     <div class="header-content">
       <div class="nav-top">
         <div class="nav-top-left">
-          <p>Carlos Garcia {{ cliente }}</p>
+          <p> {{ cliente.nombreYApellido}}</p>
         </div>
         <div class="nav-top-right">
         </div>
         <div class="nav-bottom">
           <ul>
-          <li>Cliente N° 1234</li>
+          <li>Cliente N° {{cliente.numeroDeUsuario}} </li>
           </ul>
         </div>
       </div>
@@ -70,113 +70,28 @@
     <div class="complete-tests-title2">
       <p> ESTADO DE LOS DISPOSITIVOS </p>
     </div>
+
+    {{#listaMediciones}}
     <div class="complete-test-table2">
       <div class="test to-buy2" style="display: inline-block;margin-right:50px;" >
-        <p style="text-align:left">1234</p>
-        <p style="text-align:center">ID USUARIO</p>
+        <p style="text-align:left">{{ med.descripcion }}</p>
+        <p style="text-align:center">DESCRIPCION</p>
       </div>
       <div class="test desirability2" style="display: inline-block;margin-right: 50px;">
-        <p style="text-align:left">32131 KW</p>
-        <p style="text-align:center">CONSUMO</p>
+        <p style="text-align:left"></p>
+        <p style="text-align:center"></p>
       </div>
       <div class="test desirability3" style="display: inline-block;margin-right: 50px;">
-        <p style="text-align:left">43224 KW</p>
-        <p style="text-align:center">CONSUMO MENSUAL</p>
+        <p style="text-align:left"></p>
+        <p style="text-align:center"></p>
       </div>
       <div class="test desirability4" style="display: inline-block">
-        <p style="text-align:left">R9 SARASA</p>
-        <p style="text-align:center">CATEGORIA DATOS DEL USUARIO</p>
+        <p style="text-align:left"> {{ med.medicion }}</p>
+        <p style="text-align:center">{{med.unidad}}</p>
       </div>
-      <div class="complete-test-table2">
-        <div class="test to-buy2" style="display: inline-block;margin-right:50px; " >
-          <p style="text-align:left">1234</p>
-          <p style="text-align:center">ID USUARIO</p>
-        </div>
-        <div class="test desirability2" style="display: inline-block;margin-right: 50px;">
-          <p style="text-align:left">32131 KW</p>
-          <p style="text-align:center">CONSUMO</p>
-        </div>
-        <div class="test desirability3" style="display: inline-block;margin-right: 50px;">
-          <p style="text-align:left">43224 KW</p>
-          <p style="text-align:center">CONSUMO MENSUAL</p>
-        </div>
-        <div class="test desirability4" style="display: inline-block">
-          <p style="text-align:left">R9 SARASA</p>
-          <p style="text-align:center">CATEGORIA DATOS DEL USUARIO</p>
-        </div>
+      {{/listaMediciones }}
 
-        <div class="complete-test-table2">
-          <div class="test to-buy2" style="display: inline-block;margin-right:50px;" >
-            <p style="text-align:left">1234</p>
-            <p style="text-align:center">ID USUARIO</p>
-          </div>
-          <div class="test desirability2" style="display: inline-block;margin-right: 50px;">
-            <p style="text-align:left">32131 KW</p>
-            <p style="text-align:center">CONSUMO</p>
-          </div>
-          <div class="test desirability3" style="display: inline-block;margin-right: 50px;">
-            <p style="text-align:left">43224 KW</p>
-            <p style="text-align:center">CONSUMO MENSUAL</p>
-          </div>
-          <div class="test desirability4" style="display: inline-block">
-            <p style="text-align:left">R9 SARASA</p>
-            <p style="text-align:center">CATEGORIA DATOS DEL USUARIO</p>
-          </div>
-        </div>
-        <div class="complete-test-table2">
-          <div class="test to-buy2" style="display: inline-block;margin-right:50px; " >
-            <p style="text-align:left">1234</p>
-            <p style="text-align:center">ID USUARIO</p>
-          </div>
-          <div class="test desirability2" style="display: inline-block;margin-right: 50px;">
-            <p style="text-align:left">32131 KW</p>
-            <p style="text-align:center">CONSUMO</p>
-          </div>
-          <div class="test desirability3" style="display: inline-block;margin-right: 50px;">
-            <p style="text-align:left">43224 KW</p>
-            <p style="text-align:center">CONSUMO MENSUAL</p>
-          </div>
-          <div class="test desirability4" style="display: inline-block">
-            <p style="text-align:left">R9 SARASA</p>
-            <p style="text-align:center">CATEGORIA DATOS DEL USUARIO</p>
-          </div>
 
-          <div class="complete-test-table2">
-            <div class="test to-buy2" style="display: inline-block;margin-right:50px;" >
-              <p style="text-align:left">1234</p>
-              <p style="text-align:center">ID USUARIO</p>
-            </div>
-            <div class="test desirability2" style="display: inline-block;margin-right: 50px;">
-              <p style="text-align:left">32131 KW</p>
-              <p style="text-align:center">CONSUMO</p>
-            </div>
-            <div class="test desirability3" style="display: inline-block;margin-right: 50px;">
-              <p style="text-align:left">43224 KW</p>
-              <p style="text-align:center">CONSUMO MENSUAL</p>
-            </div>
-            <div class="test desirability4" style="display: inline-block">
-              <p style="text-align:left">R9 SARASA</p>
-              <p style="text-align:center">CATEGORIA DATOS DEL USUARIO</p>
-            </div>
-          </div>
-          <div class="complete-test-table2">
-            <div class="test to-buy2" style="display: inline-block;margin-right:50px; " >
-              <p style="text-align:left">1234</p>
-              <p style="text-align:center">ID USUARIO</p>
-            </div>
-            <div class="test desirability2" style="display: inline-block;margin-right: 50px;">
-              <p style="text-align:left">32131 KW</p>
-              <p style="text-align:center">CONSUMO</p>
-            </div>
-            <div class="test desirability3" style="display: inline-block;margin-right: 50px;">
-              <p style="text-align:left">43224 KW</p>
-              <p style="text-align:center">CONSUMO MENSUAL</p>
-            </div>
-            <div class="test desirability4" style="display: inline-block">
-              <p style="text-align:left">R9 SARASA</p>
-              <p style="text-align:center">CATEGORIA DATOS DEL USUARIO</p>
-
-            </div>
             <div style="margin:10px;padding-top: 26px;"  >
               SITIO CREADO POR NOSOTROS eskereee
             </div>
