--- a/src/main/resources/templates/usuarioEstados.hbs
+++ b/src/main/resources/templates/usuarioEstados.hbs
@@ -27,10 +27,10 @@
       <div class="head-menu">
         <ul>
           <div class="link">
-          <li><a href="/usuario" > Inicio</a></li>
-          <li><a href="/usuario/dispositivos" style="font-size:15px;">Dispositivos</a></li>
-          <li><a href="/usuario/mediciones">Mediciones</a></li>
-          <li><a href="/usuario/simplex">Simplex</a></li>
+          <li><a href="/usuario/{{ cliente.numeroDeUsuario }}" > Inicio</a></li>
+          <li><a href="/usuarioEstados" style="font-size:15px;">Dispositivos</a></li>
+          <li><a href="/usuarioUltimas">Mediciones</a></li>
+          <li><a href="/usuarioSimplex">Simplex</a></li>
           </div>
 
         </ul>
@@ -51,13 +51,13 @@
     <div class="header-content">
       <div class="nav-top">
         <div class="nav-top-left">
-          <p>{{ nombreYapellido }}</p>
+          <p>{{  cliente.nombreYApellido }}</p>
         </div>
         <div class="nav-top-right">
         </div>
         <div class="nav-bottom">
           <ul>
-          <li>Cliente N° {{ numeroDeUsuario }}</li>
+          <li>Cliente N° {{ cliente.numeroDeUsuario }}</li>
           </ul>
         </div>
       </div>
@@ -70,18 +70,19 @@
     <div class="complete-tests-title2">
       <p> ESTADO DE LOS DISPOSITIVOS </p>
     </div>
-    {{# listaDispositivos}}
+    {{#listaDispositivos}}
+
     <div class="complete-test-table2">
       <div class="test to-buy2" style="display: inline-block;margin-right:50px;" >
         <p style="text-align:left">{{ name }}</p>
         <p style="text-align:center">DISPOSITIVO </p>
       </div>
       <div class="test desirability2" style="display: inline-block;margin-right: 50px;">
-        <p style="text-align:left">{{ esBajoConsumo }}</p>
+        <p style="text-align:left">{{ esBajoConsumoBoolean }}</p>
         <p style="text-align:center">ES BAJO CONSUMO</p>
       </div>
       <div class="test desirability3" style="display: inline-block;margin-right: 50px;">
-        <p style="text-align:left">{{ estado }} </p>
+        <p style="text-align:left">{{ estadoString }} </p>
         <p style="text-align:center">ESTADO</p>
       </div>
       <div class="test desirability4" style="display: inline-block">
