--- a/src/main/resources/templates/usuarioUltimas.hbs
+++ b/src/main/resources/templates/usuarioUltimas.hbs
@@ -74,7 +74,7 @@
     {{#listaMediciones}}
     <div class="complete-test-table2">
       <div class="test to-buy2" style="display: inline-block;margin-right:50px;" >
-        <p style="text-align:left">{{ med.descripcion }}</p>
+        <p style="text-align:left">{{ descripcion }}</p>
         <p style="text-align:center">DESCRIPCION</p>
       </div>
       <div class="test desirability2" style="display: inline-block;margin-right: 50px;">
@@ -86,8 +86,8 @@
         <p style="text-align:center"></p>
       </div>
       <div class="test desirability4" style="display: inline-block">
-        <p style="text-align:left"> {{ med.medicion }}</p>
-        <p style="text-align:center">{{med.unidad}}</p>
+        <p style="text-align:left"> {{ medicionS }}</p>
+        <p style="text-align:center">{{ unidad}}</p>
       </div>
       {{/listaMediciones }}
 
