--- a/src/main/resources/templates/admin.hbs
+++ b/src/main/resources/templates/admin.hbs
@@ -64,7 +64,7 @@
     <div class="content row">
         <div class="averages">
 
-            <form method="POST" action="/admin/informacion">
+            <form method="GET" action="/admin/informacion">
                 <br>
                 <br>
                 <div class="mdl-textfield mdl-js-textfield">
@@ -86,19 +86,19 @@
         </div>
         <div class="complete-test-table2">
              <div class="test to-buy2" style="display: inline-block;margin-right:50px;" >
-                <p style="text-align:left">{{ numeroDeUsuario }}</p>
+                <p style="text-align:left">{{ cliente.numeroDeUsuarioS }}</p>
                 <p style="text-align:center">ID USUARIO</p>
             </div>
             <div class="test desirability2" style="display: inline-block;margin-right: 50px;">
-                <p style="text-align:left">{{ maximoConsumo }} KW </p>
+                <p style="text-align:left">{{ cliente.maximoConsumoS }} KW </p>
                 <p style="text-align:center">MAXIMO CONSUMO</p>
             </div>
             <div class="test desirability3" style="display: inline-block;margin-right: 50px;">
-                <p style="text-align:left">{{ consumoMensual }} KW</p>
+                <p style="text-align:left">{{ cliente.consumoMensualS }} KW</p>
                 <p style="text-align:center">CONSUMO MENSUAL</p>
             </div>
             <div class="test desirability4" style="display: inline-block">
-                <p style="text-align:left"> {{ CategoriaResidencial }}</p>
+                <p style="text-align:left"> {{ cliente.categoriaResidencialS }}</p>
                 <p style="text-align:center">CATEGORIA</p>
             </div>
 
