--- a/src/main/resources/templates/admin.hbs
+++ b/src/main/resources/templates/admin.hbs
@@ -50,7 +50,7 @@
         <div class="header-content">
             <div class="nav-top">
                 <div class="nav-top-left">
-                    <p>Administrador {{ nombreUsuario }}</p>
+                    <p>Administrador </p>
                 </div>
                 <div class="nav-top-right">
                 </div>
