--- a/src/main/resources/templates/adminAlta.hbs
+++ b/src/main/resources/templates/adminAlta.hbs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="stylesheet" href="css/styleMap.css">
+    <link rel="stylesheet" href="/css/styleMap.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
     <link rel='stylesheet' href='https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-blue.min.css'>
 
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <title>Code-mine App1</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/fontawesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/styleUsuario.css">
+    <link rel="stylesheet" type="text/css" href="/css/styleUsuario.css">
 </head>
 <body>
 <div class="container">
@@ -50,7 +50,7 @@
         <div class="header-content">
             <div class="nav-top">
                 <div class="nav-top-left">
-                    <p>Administrador {{ nombre }}</p>
+                    <p>Administrador </p>
                 </div>
                 <div class="nav-top-right">
                 </div>
@@ -63,6 +63,8 @@
     <!-- Content -->
     <div class="content row" style="display:inline-block">
         <div class="averages" style="display:inline-block">
+
+
         </div>
 
         <!-- Second table of completed tests section-->
@@ -70,7 +72,7 @@
             <p>SELECCION DE DISPOSITIVO:</p>
             <ul>
                 <div class="linkDispositivos">
-                    <li><a href="/usuario"> Aire Acondicionado</a></li>
+                    <li><a href="/admin/altaDispositivo/AireAcondicionado"> Aire Acondicionado</a></li>
                     <li><a href="/dispositivo"> Televisor </a></li>
                     <li><a href="/reportes"> Heladera</a></li>
                     <li><a href="/usuario"> Lavarropas</a></li>
@@ -93,42 +95,13 @@
                 </div>
             </ul>
         </div>
-        <div class="complete-tests-title2" style="display: inline-block">
-            <ul>
-                <div class="linkDispositivos">
-                    <li><a href="/usuario"> Inicio</a></li>
-                    <li><a href="/dispositivo"> Alta dispositivo</a></li>
-                    <li><a href="/reportes"> Ver reportes</a></li>
-                    <li><a href="/usuario"> Inicio</a></li>
-                    <li><a href="/dispositivo"> Alta dispositivo</a></li>
-                    <li><a href="/reportes"> Ver reportes</a></li>
-                    <li><a href="/usuario"> Inicio</a></li>
-                    <li><a href="/dispositivo"> Alta dispositivo</a></li>
-                    <li><a href="/reportes"> Ver reportes</a></li>
-                </div>
-            </ul>
-        </div>
-        <div class="complete-tests-title2" style="display: inline-block">
-            <ul>
-                <div class="linkDispositivos">
-                    <li><a href="/usuario"> Inicio</a></li>
-                    <li><a href="/dispositivo"> Alta dispositivo</a></li>
-                    <li><a href="/reportes"> Ver reportes</a></li>
-                    <li><a href="/usuario"> Inicio</a></li>
-                    <li><a href="/dispositivo"> Alta dispositivo</a></li>
-                    <li><a href="/reportes"> Ver reportes</a></li>
-                    <li><a href="/usuario"> Inicio</a></li>
-                    <li><a href="/dispositivo"> Alta dispositivo</a></li>
-                    <li><a href="/reportes"> Ver reportes</a></li>
-                </div>
-            </ul>
-        </div>
+
         <form method="POST" action="/usuario" style="display: inline-block;height: 50%;margin-left:15px;">
             <br>
             <br>
             <div class="mdl-textfield mdl-js-textfield">
-                <input class="mdl-textfield__input" type="text" id="CONSUMODISPOSITIVO" name="NUMERODECLIENTE" />
-                <label class="mdl-textfield__label" for="CONSUMODISPOSITIVO">CONSUMO </label>
+                <input class="mdl-textfield__input" type="text" id="ID" name="ID" />
+                <label class="mdl-textfield__label" for="ID">ID CLIENTE </label>
             <button type="submit" style="display: inline-block;margin-left:100% " class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" value="CONSUMODISPOSITIVO ">ENVIAR</button>
             </div>
             </br>
