--- a/src/main/resources/templates/adminAltaAire.hbs
+++ b/src/main/resources/templates/adminAltaAire.hbs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="stylesheet" href="css/styleMap.css">
+    <link rel="stylesheet" href="/css/styleMap.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
     <link rel='stylesheet' href='https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-blue.min.css'>
 
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <title>Code-mine App1</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/fontawesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/styleUsuario.css">
+    <link rel="stylesheet" type="text/css" href="/css/styleUsuario.css">
 </head>
 <body>
 <div class="container">
@@ -50,7 +50,7 @@
         <div class="header-content">
             <div class="nav-top">
                 <div class="nav-top-left">
-                    <p>Administrador {{ nombre }}</p>
+                    <p>Administrador </p>
                 </div>
                 <div class="nav-top-right">
                 </div>
@@ -66,69 +66,33 @@
         </div>
 
         <!-- Second table of completed tests section-->
-        <div class="complete-tests-title2" style="display: inline-block">
-            <p>SELECCION DE DISPOSITIVO:</p>
-            <ul>
-                <div class="linkDispositivos">
-                    <li><a href="/usuario"> Aire Acondicionado</a></li>
-                    <li><a href="/dispositivo"> Televisor </a></li>
-                    <li><a href="/reportes"> Heladera</a></li>
-                    <li><a href="/usuario"> Lavarropas</a></li>
-                    <li><a href="/dispositivo"> Ventilador</a></li>
-                    <li><a href="/reportes"> Lampara</a></li>
-                    <li><a href="/usuario"> PC</a></li>
-                    <li><a href="/dispositivo"> Microondas</a></li>
-                    <li><a href="/reportes"> Plancha</a></li>
-                </div>
-
-            </ul>
-        </div>
 
         <div class="complete-tests-title2" style="display: inline-block">
             <ul>
-                <div class="linkDispositivos">
-                    {{#opciones}}
-                    <li><a href={{link}}> {{opcion}}</a></li>
-                    {{/opciones}}
-                </div>
+                    <div class="linkDispositivos">
+                        <li style="font-size: 15px;"> Aire Acondicionado</li>
+                        <li> Televisor </li>
+                        <li> Heladera</li>
+                        <li> Lavarropas</li>
+                        <li> Ventilador</li>
+                        <li>Lampara</li>
+                        <li> PC</li>
+                        <li>Microondas</li>
+                        <li> Plancha</li>
+                    </div>
             </ul>
         </div>
-        <div class="complete-tests-title2" style="display: inline-block">
-            <ul>
-                <div class="linkDispositivos">
-                    <li><a href="/usuario"> Inicio</a></li>
-                    <li><a href="/dispositivo"> Alta dispositivo</a></li>
-                    <li><a href="/reportes"> Ver reportes</a></li>
-                    <li><a href="/usuario"> Inicio</a></li>
-                    <li><a href="/dispositivo"> Alta dispositivo</a></li>
-                    <li><a href="/reportes"> Ver reportes</a></li>
-                    <li><a href="/usuario"> Inicio</a></li>
-                    <li><a href="/dispositivo"> Alta dispositivo</a></li>
-                    <li><a href="/reportes"> Ver reportes</a></li>
-                </div>
-            </ul>
-        </div>
-        <div class="complete-tests-title2" style="display: inline-block">
-            <ul>
-                <div class="linkDispositivos">
-                    <li><a href="/usuario"> Inicio</a></li>
-                    <li><a href="/dispositivo"> Alta dispositivo</a></li>
-                    <li><a href="/reportes"> Ver reportes</a></li>
-                    <li><a href="/usuario"> Inicio</a></li>
-                    <li><a href="/dispositivo"> Alta dispositivo</a></li>
-                    <li><a href="/reportes"> Ver reportes</a></li>
-                    <li><a href="/usuario"> Inicio</a></li>
-                    <li><a href="/dispositivo"> Alta dispositivo</a></li>
-                    <li><a href="/reportes"> Ver reportes</a></li>
-                </div>
-            </ul>
-        </div>
-        <form method="POST" action="/usuario" style="display: inline-block;height: 50%;margin-left:15px;">
+
+        <form method="POST" action="/admin/altaDispositivo/aireAcondicionado" style="display: inline-block;height: 50%;margin-left:15px;">
             <br>
             <br>
-            <div class="mdl-textfield mdl-js-textfield">
-                <input class="mdl-textfield__input" type="text" id="CONSUMODISPOSITIVO" name="NUMERODECLIENTE" />
-                <label class="mdl-textfield__label" for="CONSUMODISPOSITIVO">CONSUMO </label>
+            <div class="mdl-textfield mdl-js-textfield" >
+                <input class="mdl-textfield__input" style="margin-bottom:25px;" type="text" id="NOMBRE" name="NOMBRE" />
+                <label class="mdl-textfield__label"  for="NOMBRE">NOMBRE </label>
+
+                <input class="mdl-textfield__input"  type="text" id="FRIGORIAS" name="FRIGORIAS" />
+                <label class="mdl-textfield__label" style="margin-top:50px;"  for="FRIGORIAS">FRIGORIAS </label>
+
             <button type="submit" style="display: inline-block;margin-left:100% " class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" value="CONSUMODISPOSITIVO ">ENVIAR</button>
             </div>
             </br>
