--- a/src/main/resources/templates/usuarioSimplex.hbs
+++ b/src/main/resources/templates/usuarioSimplex.hbs
@@ -78,15 +78,15 @@
         <p style="text-align:center">DISPOSITIVO </p>
       </div>
       <div class="test desirability2" style="display: inline-block;margin-right: 50px;">
-        <p style="text-align:left">{{ estado }}</p>
+        <p style="text-align:left">{{ estadoString }}</p>
         <p style="text-align:center">ESTADO ACTUAL</p>
       </div>
       <div class="test desirability3" style="display: inline-block;margin-right: 50px;">
-        <p style="text-align:left">{{ estadoFuturo }} </p>
+        <p style="text-align:left">{{ consumoIdealString }} </p>
         <p style="text-align:center">ESTADO IDEAL</p>
       </div>
       <div class="test desirability4" style="display: inline-block">
-        <p style="text-align:left">{{ potencia }}</p>
+        <p style="text-align:left">{{ potenciaString }}</p>
         <p style="text-align:center">POTENCIA</p>
       </div>
       {{/listaDispositivos}}
