--- a/src/main/resources/templates/adminAlta.hbs
+++ b/src/main/resources/templates/adminAlta.hbs
@@ -29,7 +29,7 @@
                     <div class="link">
                         <li><a href="/admin"> Inicio</a></li>
                         <li><a href="/admin/altaDispositivo" style="font-size:15px;"> Alta dispositivo</a></li>
-                        <li><a href="/adminReportes" > Ver Reportes</a></li>
+                        <li><a href="/admin/reportes" > Ver Reportes</a></li>
                     </div>
 
                 </ul>
@@ -72,7 +72,7 @@
             <p>SELECCION DE DISPOSITIVO:</p>
             <ul>
                 <div class="linkDispositivos">
-                    <li><a href="/admin/altaDispositivo/AireAcondicionado"> Aire Acondicionado</a></li>
+                    <li><a href="/admin/altaDispositivo/aireAcondicionado"> Aire Acondicionado</a></li>
                     <li><a href="/dispositivo"> Televisor </a></li>
                     <li><a href="/reportes"> Heladera</a></li>
                     <li><a href="/usuario"> Lavarropas</a></li>
