--- a/src/main/resources/templates/adminAltaAire.hbs
+++ b/src/main/resources/templates/adminAltaAire.hbs
@@ -79,7 +79,7 @@
                         <li> PC</li>
                         <li>Microondas</li>
                         <li> Plancha</li>
-                    </div>
+                    </div>al4
             </ul>
         </div>
 
@@ -92,6 +92,9 @@
 
                 <input class="mdl-textfield__input"  type="text" id="FRIGORIAS" name="FRIGORIAS" />
                 <label class="mdl-textfield__label" style="margin-top:50px;"  for="FRIGORIAS">FRIGORIAS </label>
+
+                <input class="mdl-textfield__input"  type="text" id="ID" name="ID" />
+                <label class="mdl-textfield__label" style="margin-top:50px;"  for="ID">ID CLIENTE </label>
 
             <button type="submit" style="display: inline-block;margin-left:100% " class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" value="CONSUMODISPOSITIVO ">ENVIAR</button>
             </div>
