--- a/src/main/resources/templates/usuario.hbs
+++ b/src/main/resources/templates/usuario.hbs
@@ -122,7 +122,7 @@
         <p>CALCULAR CONSUMO PERIODO:</p>
       </div>
       <div class="complete-test-table">
-        <form method="POST" action="/login">
+        <form method="POST" action="/usuario/{{ cliente.numeroDeUsuario }}/reportes">
           <br>
           <br>
           <div class="mdl-textfield mdl-js-textfield">
