--- a/src/main/resources/templates/adminAltaAire.hbs
+++ b/src/main/resources/templates/adminAltaAire.hbs
@@ -79,7 +79,7 @@
                         <li> PC</li>
                         <li>Microondas</li>
                         <li> Plancha</li>
-                    </div>al4
+                    </div>
             </ul>
         </div>
 
@@ -87,14 +87,14 @@
             <br>
             <br>
             <div class="mdl-textfield mdl-js-textfield" >
-                <input class="mdl-textfield__input" style="margin-bottom:25px;" type="text" id="NOMBRE" name="NOMBRE" />
-                <label class="mdl-textfield__label"  for="NOMBRE">NOMBRE </label>
+                <input class="mdl-textfield__input" style="margin-bottom:50px;" type="text" id="NOMBRE" name="NOMBRE" />
+                <label class="mdl-textfield__label"  style="margin-bottom:50px;" for="NOMBRE">NOMBRE </label>
 
-                <input class="mdl-textfield__input"  type="text" id="FRIGORIAS" name="FRIGORIAS" />
-                <label class="mdl-textfield__label" style="margin-top:50px;"  for="FRIGORIAS">FRIGORIAS </label>
+                <input class="mdl-textfield__input"  style="margin-top:25px;margin-bottom: 25px;" type="text" id="FRIGORIAS" name="FRIGORIAS" />
+                <label class="mdl-textfield__label"  style="margin-top:25px;margin-bottom: 25px;"  for="FRIGORIAS">FRIGORIAS </label>
 
                 <input class="mdl-textfield__input"  type="text" id="ID" name="ID" />
-                <label class="mdl-textfield__label" style="margin-top:50px;"  for="ID">ID CLIENTE </label>
+                <label class="mdl-textfield__label"  for="ID">ID CLIENTE </label>        
 
             <button type="submit" style="display: inline-block;margin-left:100% " class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" value="CONSUMODISPOSITIVO ">ENVIAR</button>
             </div>
